test/fail/for10.v3
//@seman = VarDeclError @ 5:21
class for02 {
	def m() {
		var a: int;
		for (a: bool; a; a) { }
	}
}
